refactor(voglander): 重构 GB28181 相关代码
- 更新 Maven 依赖版本:
  - zlm.version: 1.0.6 ->1.0.8
  - redis 版本: 删除
- 修改 GB28181客户端和服务器配置
- 优化设备信息处理逻辑
- 删除冗余代码和测试用例